# yolov8-segmentation

./: CMakeLists.txt  LICENSE  README.md  main.cpp  yolov8_seg.cpp  yolov8_seg.h  yolov8_utils.cpp  yolov8_utils.h
